# okta-yoink

./: .gitignore  README.md  env.example  pyproject.toml
docs/: development-status.md  okta-shim-design.md  okta-token-automation.md
okta_yoink/: __init__.py  config.py  token_extractor.py
src/okta_token_automation/: config.py  main.py  token_extractor.py
tests/: __init__.py  test_config.py  test_integration.py  test_main.py  test_token_extractor.py
